# z-spec

./: .biff  .envrc  .gitignore  .gitmodules  .markdownlint.jsonc  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  install.sh  prfaq.bib  prfaq.tex  pyproject.toml
.beads/: .gitignore  README.md  config.yaml  issues.jsonl  metadata.json
.claude/: settings.json
.claude-plugin/: plugin.json
.github/workflows/: docs.yml  release.yml
.lux/: config.md
.punt-labs/: ethos.yaml
.punt-labs/ethos/: config.yaml
.vox/: config.md
commands/: audit-dev.md  b-animate.md  b-check-dev.md  b-create.md  b-refine.md  check-dev.md  check.md  cleanup-dev.md  cleanup.md  code2model-dev.md  code2model.md  contracts.md  create.md  doctor-dev.md  doctor.md  elaborate-dev.md  elaborate.md  help-dev.md  help.md  model2code-dev.md  model2code.md  oracle-dev.md  partition-dev.md  partition.md  prove.md  refine-dev.md  refine.md  setup-dev.md  setup.md  test-dev.md  test.md
docs/: research-lux-state-explorer.md  z-spec-lux-roadmap.md
docs/prd/: b-animate.md  b-check.md  b-create.md  b-refine.md  z-contracts.md  z-oracle.md  z-partition.md  z-prove.md  z-refine.md
docs/sparc/: z-partition-implementation.md
examples/: animation-hints-bad.tex  animation-hints-good.tex  claude-code-biff.tex  claude-code-lux.tex  claude-code-quarry.tex  claude-code-vox.tex  claude-code.lux  claude-code.tex  search-panel.tex
reference/: b-machine-patterns.md  b-notation.md  latex-style.md  lean4-patterns.md  probcli-guide.md  schema-patterns.md  test-patterns.md
research/: graphviz-install.md  research-2026-03-03-formal-specs-llm.md
scripts/: release-plugin.sh  restore-dev-plugin.sh
src/punt_zspec/: __init__.py  __main__.py  applet.py  browser.py  fuzz.py  manifest.py  parser.py  prob.py  report.py  server.py  types.py
templates/: preamble.tex
tests/: test_applet.py  test_browser.py  test_fuzz.py  test_manifest.py  test_parser.py  test_prob.py  test_report.py  test_server.py
tutorials/intro/: 01-sets-and-types.tex  02-state-schemas.tex  03-operations.tex  04-observation.tex  05-partial-functions.tex  06-initialization.tex  07-total-operations.tex  08-schema-inclusion.tex  09-sets-and-filtering.tex  10-complete-spec.tex  manifest.toml
