[project]
name = "punt-z-spec"
version = "0.14.1"
description = "Z specification toolkit: type-checker, model-checker, and Claude Code plugin"
readme = "README.md"
authors = [{ name = "Punt Labs", email = "hello@punt-labs.com" }]
requires-python = ">=3.13"
license = "MIT"
keywords = [
    "z-notation",
    "formal-methods",
    "model-checking",
    "mcp",
    "fuzz",
    "prob",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "mcp>=1.0.0",
    "punt-lux>=0.9.0",
    "typer>=0.24.1",
]

[project.urls]
Homepage = "https://github.com/punt-labs/z-spec"
Repository = "https://github.com/punt-labs/z-spec"
"Bug Tracker" = "https://github.com/punt-labs/z-spec/issues"

[project.scripts]
z-spec = "punt_zspec.__main__:app"

[project.optional-dependencies]
dev = [
    "mypy>=1.14.0",
    "pyright>=1.1.390",
    "ruff>=0.9.0",
    "pytest>=8.3.0",
    "pytest-cov>=6.0.0",
]

[build-system]
requires = ["uv_build>=0.9.14,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "punt_zspec"

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
    "TID", # flake8-tidy-imports
    "RUF", # Ruff-specific rules
]
ignore = [
    "TC001",  # Move import into TYPE_CHECKING
    "TC003",  # Move standard lib import into TYPE_CHECKING
    "RUF001", # Ambiguous Unicode — intentional for Z notation symbols
]

[tool.ruff.lint.isort]
known-first-party = ["punt_zspec"]
combine-as-imports = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = ["tests", "tests.*"]
disallow_untyped_defs = false

[tool.pyright]
pythonVersion = "3.13"
typeCheckingMode = "strict"
reportMissingTypeStubs = "warning"

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q"
testpaths = ["tests"]

[tool.coverage.run]
source = ["src"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
show_missing = true
precision = 2
